<resources>
    <string name="app_name">LaundryMan</string>
    <string name="app_uname">LaundryMan</string>
    <string name="register">register</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phoneNo">Phone No</string>
    <string name="password">password</string>
    <string name="signup">Not a member ? Sign up  now.</string>
    <string name="login">Login</string>
    <string name="address_1">Street Address</string>
    <string name="address_2">Street Address</string>
    <string name="address_3">landmark</string>
    <string name="address_4">city , state , country</string>
    <string name="open_navigation">Open</string>
    <string name="close_navigation">Close</string>
    <string name="laundry_clothes">No of clothes</string>
    <string name="add">Add more laundry..</string>
    <string name="submit">submit</string>
    <string name="laundry_label">No of clothes :</string>
    <string name="cost">Total</string>
    <string name="tick">tick</string>
    <string name="sucessful">Sucessful</string>
    <string name="you_have_successfully_placed_the_order">You have successfully placed the order</string>
    <string name="close">close</string>
    <array name="cloth_type">
        <item>shirt</item>
        <item>pant</item>
        <item>saree</item>
        <item>special dress</item>
    </array>
</resources>
