<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="600dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
       <RelativeLayout
           android:id="@+id/body"
           android:background="#009688"
           android:layout_width="match_parent"
           android:layout_height="150dp">
           <ImageView
               android:id="@+id/tick"
               android:layout_marginTop="60dp"
               android:src="@android:drawable/ic_dialog_info"
               android:layout_centerHorizontal="true"
               android:layout_width="80dp"
               android:layout_height="80dp"
               android:contentDescription="@string/tick" />

       </RelativeLayout>
        <TextView
            android:id="@+id/message_dailog"
            android:layout_below="@+id/body"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/sucessful"
            android:textColor="#000"
            android:fontFamily="@font/roboto_regular"
            android:textSize="21sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/message_sub_dailog"
            android:layout_below="@+id/message_dailog"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/you_have_successfully_placed_the_order"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/close_dailog"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:text="@string/close"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_below="@+id/message_sub_dailog"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>