<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <Spinner
        android:id="@+id/select_clothes"
        android:layout_width="150dp"
        android:layout_marginLeft="25dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:spinnerMode="dropdown"
        android:entries="@array/cloth_type"
        android:layout_marginStart="25dp" />


    <EditText
        android:id="@+id/nof_clothes_entry"
        android:textColorHint="@color/colorAccent"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:hint="@string/laundry_clothes"
        android:layout_width="match_parent"
        android:layout_toRightOf="@+id/select_clothes"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/select_clothes"
        android:layout_marginLeft="15dp" />

    <Button
        android:id="@+id/dailog_add_task"
        android:text="@string/add"
        android:layout_below="@+id/nof_clothes_entry"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/submit_dialog"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dailog_add_task"
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>