<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".RegisterScreen">
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="false"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
                <include
                    android:id="@+id/toolbar_register"
                    layout="@layout/toolbar"
                    app:layout_scrollFlags="scroll|enterAlways"
                    />

            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_name"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/appbar"
                android:textColorHint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp">
                <EditText
                    android:id="@+id/Name"
                    android:hint="@string/name"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_phoneNo"
                android:layout_below="@+id/main_name"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:textColorHint="@color/colorAccent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/phoneNo_register"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/phoneNo"
                    android:layout_below="@+id/Name"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_password"
                android:layout_below="@+id/main_phoneNo"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:textColorHint="@color/colorAccent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/password_register"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/password"
                    android:layout_below="@+id/emailId_register"
                    android:inputType="textPassword"


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_ConfirmPassword"
                android:layout_below="@+id/main_password"
                android:textColorHint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/confirmPassword_register"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:layout_below="@+id/password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address1_layout"
                android:layout_below="@+id/main_ConfirmPassword"
                android:textColorHint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/address1"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/address_1"
                    android:inputType="textPostalAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address2_layout"
                android:layout_below="@+id/address1_layout"
                android:textColorHint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/address2"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/address_2"
                    android:inputType="textPostalAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address3_layout"
                android:layout_below="@+id/address2_layout"
                android:textColorHint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/address3"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/address_3"
                    android:inputType="textPostalAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address4_layout"
                android:layout_below="@id/address3_layout"
                android:textColorHint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/address4"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/address_4"
                    android:inputType="textPostalAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/register"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address4_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_button"
                android:text="@string/login"
                android:textColor="#efecec" />


        </RelativeLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


