<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appbar_login"
            android:fitsSystemWindows="false"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                app:layout_scrollFlags="scroll|enterAlways"
                />

        </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_below="@+id/appbar_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        android:background="@color/Transparen"
        android:contentDescription="TODO"
        android:src="@drawable/laundry"
        app:srcCompat="@drawable/laundry" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailId_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_width="320dp"
            android:layout_below="@+id/logo"
            app:startIconDrawable="@drawable/ic_person_black_24dp"
            android:layout_height="80dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNo"
                android:hint="@string/phoneNo"
                android:inputType="phone"
                android:textColorHint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_below="@+id/emailId_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_width="320dp"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_black_24dp"
            android:layout_height="80dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPass"
                android:hint="@string/password"
                android:textColorHint="@color/colorAccent"
                android:layout_width="match_parent"
                android:inputType="textPassword"

                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button"
            android:text="@string/login"
            android:textColor="#efecec" />
        <TextView
            android:id="@+id/signup_login"
            android:layout_width="wrap_content"
            android:layout_below="@+id/login"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="#000"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="signUp"
            android:text="@string/signup"
            android:layout_height="wrap_content"
            android:focusable="true" />

    </RelativeLayout>


